[gd_scene load_steps=4 format=3 uid="uid://ccoha73w1wh38"]

[ext_resource type="Script" path="res://player/weapons/bow.gd" id="1_e72ul"]
[ext_resource type="Texture2D" uid="uid://ddxuy7e3ntt0v" path="res://assets/spritesheets/player/weapons/bow.png" id="2_imgk7"]
[ext_resource type="AudioStream" uid="uid://j5v01gjtdvft" path="res://assets/audio/bow_release.wav" id="3_1gosv"]

[node name="Bow" type="Node2D"]
script = ExtResource("1_e72ul")

[node name="BowTexture" type="TextureRect" parent="."]
texture_filter = 1
offset_top = -45.0
offset_right = 64.0
offset_bottom = 19.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_imgk7")

[node name="ArrowSpawnPoint" type="Marker2D" parent="."]
position = Vector2(93, -1)

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="BowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1gosv")

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
